--- a/App/src/views/home.ejs
+++ b/App/src/views/home.ejs
@@ -68,7 +68,7 @@
       <div class="mdl-layout--large-screen-only mdl-layout__header-row">
       </div>
       <div class="mdl-layout--large-screen-only mdl-layout__header-row">
-        <h3>Projeto Amigabilidade de Gênero</h3>
+        <h3>Projeto Amora</h3>
       </div>
       <div class="mdl-layout--large-screen-only mdl-layout__header-row">
       </div>
